--- a/Makefile.conf
+++ b/Makefile.conf
@@ -8,7 +8,7 @@
 #                                                                             #
 ###############################################################################
 
-COQMF_VFILES = theories/Quivers/Quiver.v theories/Quivers/ntPath.v theories/Quivers/ntPathPairs.v theories/Quivers/Path.v theories/Algebra/Classes.v theories/Algebra/Submodule.v theories/Algebra/Quotient.v theories/Algebra/Morphism.v theories/Algebra/Algebras.v theories/Algebra/DirectSum.v theories/Algebra/Basis.v theories/Algebra/FreeModules.v theories/Algebra/FormalLC.v theories/Algebra/Dimension.v theories/Algebra/Matrices.v theories/Algebra/ChainComplex.v theories/Algebra/Projective.v theories/PathAlgebra/PathAlgebraMul.v theories/PathAlgebra/PathAlgebra.v theories/PathAlgebra/PathAlgebraBasis.v theories/Representations/QuiverRep.v theories/Representations/QuiverRepFunctors.v theories/Representations/StandardResolution.v theories/Examples/QuiverEG.v theories/Examples/AlgebraEG.v
+COQMF_VFILES = theories/Quivers/Quiver.v theories/Quivers/ntPath.v theories/Quivers/ntPathPairs.v theories/Quivers/Path.v theories/Algebra/Classes.v theories/Algebra/Submodule.v theories/Algebra/Quotient.v theories/Algebra/Morphism.v theories/Algebra/Algebras.v theories/Algebra/DirectSum.v theories/Algebra/Basis.v theories/Algebra/FreeModules.v theories/Algebra/FormalLC.v theories/Algebra/Dimension.v theories/Algebra/ChainComplex.v theories/Algebra/Projective.v theories/PathAlgebra/PathAlgebraMul.v theories/PathAlgebra/PathAlgebra.v theories/PathAlgebra/PathAlgebraBasis.v theories/Representations/QuiverRep.v theories/Representations/QuiverRepFunctors.v theories/Representations/StandardResolution.v theories/Examples/QuiverEG.v theories/Examples/AlgebraEG.v
 COQMF_MLIFILES = 
 COQMF_MLFILES = 
 COQMF_MLGFILES = 
